# faiss-test

./: main.py  pyproject.toml
faiss-test/: README.md  pyproject.toml
faiss-test/src/faiss_test/: __init__.py
src/: main.py
